--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "cursor-count",
   "main": "./lib/cursor-count",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Display number of multiple cursors next to the position of cursor in the status bar.",
   "repository": "https://github.com/paradoxxxzero/cursor-count",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
