Refactors package to fix deprecation issues.
- Adds atom engine range.
- Adds statusBar service.
- Refactors view attachment and updating.
- Adds | character to help indicate meaning of number.
- Uses CompositeDisposable to manage event handlers.
- Renames stylesheets -> styles.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "repository": "https://github.com/paradoxxxzero/cursor-count",
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">=0.194.0 <2.0.0"
+  },
+  "consumedServices": {
+    "status-bar": {
+      "versions": {
+        "^1.0.0": "consumeStatusBar"
+      }
+    }
   },
   "dependencies": {}
 }
